--- a/.env
+++ b/.env
@@ -26,6 +26,6 @@ APP_SECRET=249d21bc93e9d41bf70254202e8f5276
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-#DATABASE_URL="mysql://root:root@127.0.0.1:3306/test_task"
+#DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+DATABASE_URL="mysql://root:root@127.0.0.1:3306/test_task"
 ###< doctrine/doctrine-bundle ###
